--- a/src/App.css
+++ b/src/App.css
@@ -1,253 +1,264 @@
-*,
-html {
-  padding: 0;
-  margin: 0;
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  font-family : 'PT Sans', 'sans-serif'
 }
 
-html {
-  width: 100%;
-}
-
-header {
-  width: 100%;
-  height: 3.5em;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
+.home,
+.contact-us,
+.sign-up
+{
+  display:flex;
+  height:90vh;
   align-items: center;
+  justify-content: center;
+  font-size: 3rem;
 }
 
-header p {
-  font-family: helvetica;
-  padding-left: 1em;
-  font-size: 1.5em;
-  text-transform: uppercase;
-}
-
-header nav {
-  padding-right: 1em;
-}
-
-header nav a {
-  text-decoration: none;
-  color: #fff;
-  text-transform: uppercase;
-  padding: 1.2em;
-  font-family: helvetica;
-}
-
-header nav button {
-  background: #32cd32;
-  border: none;
-  outline: none;
-  padding: 0.5em 1em;
-  border-radius: 2px;
-  color: #fff;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-}
-
-.heading {
-  width: 100%;
-  height: 40em;
-  background-image: url("https://images.pexels.com/photos/317371/pexels-photo-317371.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb");
-  background-size: cover;
+.home {
+  background-image: url('./images/img-1.jpg');
   background-position: center;
+  background-size: cover;
   background-repeat: no-repeat;
-}
-
-.heading .inner {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  text-align: center;
-  color: rgb(21, 24, 226);
-  font-family: helvetica;
-}
-
-.heading .inner p {
-  font-size: 1.2em;
-  padding-bottom: 0.5em;
-  letter-spacing: 0.2em;
-}
-
-.heading .inner h1 {
-  font-size: 5em;
-  margin: 0.1em;
-}
-
-.heading .inner button {
-  padding: 0.5em;
   color: #fff;
-  background-color: #32cd32;
-  border: none;
-  outline: none;
-  border-radius: 2px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-}
+  font-size: 100px;
+}  
 
-.cta {
-  width: 100%;
-  height: auto;
-  background: #fff;
-}
 
-.cta .inner {
-  width: 90%;
-  margin: 1em auto 0 auto;
-  background: #fff;
-  display: grid;
-  grid-template-columns: 70% 30%;
-  grid-gap: 0em;
-}
-
-.cta .inner .left {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  color: deeppink;
-  font-family: helvetica;
-}
-
-.cta .inner .left h3 {
-  font-size: 2em;
-  margin-bottom: 0.5em;
-}
-
-.cta .inner .left p {
-  font-size: 1.1em;
-  line-height: 1.5em;
-}
-
-.display {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.display .inner {
-  margin: 1em auto;
-  width: 80%;
-}
-
-.display .inner > h3 {
-  font-size: 3em;
-  color: rgba(50, 50, 200, 0.8);
-  margin-bottom: 0.5em;
-}
-
-.display .inner .cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 35em;
-  grid-gap: 2em;
-}
-
-.cards > * {
-  /*   background-color:rgb(225, 223, 223,.5); */
-  border-radius: 7px;
-  /*   box-shadow:1px 1px 1px rgba(200, 200, 200); */
-}
-
-.cards img {
-  width: 100%;
-  height: 27.2em;
-}
-
-.cards .text {
-  text-align: center;
-  margin-top: 1em;
-  color: rgba(50, 50, 200, 0.8);
-}
-
-.text h3 {
-  margin-bottom: 0.5em;
-  font-size: 1.5em;
-}
-
-.push {
-  height: 3em;
-  background-color: ghostwhite;
-}
-
-footer {
-  position: relative;
-  width: 100%;
-  height: 3em;
-  background: rgba(0, 0, 0, 0.8);
+.contact-us {
+  background-image: url('./images/img-2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   color: #fff;
+  font-size: 100px;
+}
+
+.sign-up {
+  background-image: url('./images/img-7.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+
+.navbar {
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.5rem;
 }
 
-.contact {
-  background-color: ghostwhite;
-  padding: 3em 2em 1em 2em;
-}
-
-.contact h3 {
-  font-size: 2.2em;
-  text-transform: uppercase;
-  text-align: center;
-  padding-bottom: 1em;
-}
-
-.contact .inner {
-  display: grid;
-  grid-template-columns: 45% 55%;
-}
-
-.male-doctor img {
-  width: 23em;
-}
-
-form {
-  padding: 0.2em;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 2em;
-}
-
-form label {
-  display: block;
-  width: 100%;
-}
-
-form input {
-  width: 100%;
-  padding: 0.5em;
-}
-
-.full {
-  grid-column: 1/3;
-}
-
-textarea {
-  width: 100%;
-  height: 10em;
-  padding: 1em;
-}
-
-form button {
-  padding: 0.8em 1em;
-  background: #32cd32;
-  border: none;
-  outline: none;
+.navbar-logo {
   color: #fff;
-  width: 100%;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+.fa-firstdraft {
+  margin-left: 0.5rem;
+  font-size: 1.6rem;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 10px;
+  list-style: none;
   text-align: center;
-  box-shadow: 1px 1px 1px 1px rgba(120, 100, 100);
+  width: 70vw;
+  justify-content: end;
+  margin-right: 2rem;
 }
 
-
-.register-form {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
-  height: 100%;
-  margin-top: 100px;
+.nav-item {
+  display: flex;
+  align-items: center;
+  height: 80px;
 }
+
+.nav-links {
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 0.5rem;
+}
+
+.nav-links:hover {
+  background-color: #1888ff;
+  border-radius: 4px;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+  color: #fff;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .fa-caret-down {
+    display: none;
+  }
+  .NavbarItems {
+    position: relative;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .nav-links:hover {
+    background-color: #1888ff;
+    border-radius: 0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+    color: #fff;
+    font-size: 2rem;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    background: #1888ff;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.5rem;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #1888ff;
+    transition: 250ms;
+  }
+
+  button {
+    display: none;
+  }
+}
+:root {
+  --primary: #5757dd;
+}
+
+.btn {
+  padding :8px 20px;
+  border-radius:4px;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: var(--primary);
+}
+
+.btn:hover {
+  padding: 6px 18px;
+  transition: all 0.3s ease-out;
+  background-color: transparent;
+  color:#5757dd;
+  border-radius: 4px;
+  border: 2px solid var(--primary)
+
+}
+
+/* ----------------------------------------------- */
+.white{
+  color:#000;
+  background-color:#fff;
+}
+
+.btn-facebook {
+  color: #ffffff;
+  -webkit-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #2b4b90;
+  *background-color: #133783;
+  background-image: -moz-linear-gradient(top, #3b5998, #133783);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3b5998), to(#133783));
+  background-image: -webkit-linear-gradient(top, #3b5998, #133783);
+  background-image: -o-linear-gradient(top, #3b5998, #133783);
+  background-image: linear-gradient(to bottom, #3b5998, #133783);
+  background-repeat: repeat-x;
+  border-color: #133783 #133783 #091b40;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3b5998', endColorstr='#ff133783', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+  .btn-facebook:hover,
+  .btn-facebook:focus,
+  .btn-facebook:active,
+  .btn-facebook.active,
+  .btn-facebook.disabled,
+  .btn-facebook[disabled] {
+      color: #ffffff;
+      background-color: #133783 !important;
+      *background-color: #102e6d !important;
+  }
+
+  .btn-facebook:active,
+  .btn-facebook.active {
+      background-color: #0d2456 \9 !important;
+  }
+
+  .loginborder
+  {
+    border: 2px solid black;
+  }
