--- a/src/App.css
+++ b/src/App.css
@@ -643,7 +643,7 @@ body {
 }
 
 .lb_box {
-  background-color: hsl(0,0%,100%);
+  background-color: hsl(0,0%,80%);
     border-color: hsl(0,0%,80%);
     border-radius: 4px;
     border-style: solid;
@@ -677,3 +677,17 @@ body {
   font-size: 1.1em;
   color: #fff;
 }
+.Title{
+  background-color: hsl(0,0%,100%);
+    border-color: hsl(0,0%,80%);
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    width: -webkit-fill-available;
+    height: 35px;
+}
+
+/* .selectWidth {
+  margin-left: 197px;
+  margin-right: 197px;
+} */
